<resources>
    <string name="app_name">口袋零钱商户</string>
    <string name="login">商户登录</string>
    <string name="register">商户入驻</string>
    <string name="protrol">商户入驻协议</string>
    <string name="hint_login_account">请输入你的商户帐号</string>
    <string name="hint_login_pwd">请输入你的密码</string>
    <string name="title_activity_login">登录</string>
    <string name="logout">退出登录</string>
    <string name="merchant_manage">商户管理</string>
    <string name="today_come_in">今日营收</string>
    <string name="yesterday_come_in">昨日营收</string>
    <string name="red_packets">零钱收入</string>
    <string name="loan_limit">授信额度</string>
    <string name="merchant_info">商户信息</string>
    <string name="store_manage">店铺管理</string>
    <string name="title_activity_register">店铺资料</string>
    <string name="discount_rate">折扣比例</string>
    <string name="modify_pwd">修改密码</string>
    <string name="code_check">支付码核实</string>
    <string name="merchant_comein"> 商户收入 </string>
    <string name="vip_manage">会员管理</string>
    <string name="special_activities">专场活动</string>
    <string name="share_gang">分享帮</string>
    <string name="merchant_insurance">商户保险</string>
    <string name="merchant_manage_finances">商户理财</string>
    <string name="transfer_agent">代理记账</string>
    <string name="other">其他</string>
    <string name="store_QR_code">店铺二维码</string>
    <string name="merchant_loan">商户贷款</string>
    <string name="flow_analysis">流量分析</string>
    <string name="QR_code">二维码</string>
    <string name="finance_other">金融及其他</string>
    <string name="title_activity_code_check">支付码核实</string>
    <string name="hint_input_pay_code">输入支付码</string>
    <string name="pay_code">支付码</string>
    <string name="pay_code_tips">注：只能输入数字</string>
    <string name="submit_check">提交核实</string>
    <string name="footer_hint_normal">加载更多</string>
    <string name="title_activity_merchant_come_in">商户收入</string>
    <string name="title_activity_merchant_info">商户信息</string>
    <string name="title_activity_store_manage">店铺管理</string>
    <string name="title_activity_discount_rate">折扣比例</string>
    <string name="title_activity_QR_code">店铺二维码</string>
    <string name="title_activity_merchant_loan">商户贷款</string>
    <string name="normal_rate">正常折扣</string>
    <string name="rate">折起</string>
    <string name="discount_rate_tips">注：请在上面设置商户折扣，只能输入数字和小数点</string>
    <string name="modify_rate">确认修改</string>
    <string name="title_activity_modify_pwd">修改密码</string>
    <string name="old_pwd">旧密码：</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="new_pwd">新密码：</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="confirm_pwd">确认密码：</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="save">保存</string>
    <string name="different_pwd">确认密码与新密码不一致</string>
    <string name="store_info">店铺管理</string>
    <string name="store_name">门店名称</string>
    <string name="store_province">所在省市</string>
    <string name="store_address">街道地址</string>
    <string name="store_category">商店分类</string>
    <string name="boss_info">掌柜信息</string>
    <string name="real_name">真实姓名</string>
    <string name="real_name_hint">负责人/法人姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_number_hint">输入您的手机号</string>
    <string name="id_card">身份证号</string>
    <string name="id_card_hint">输入您的身份证号</string>
    <string name="email">电子邮箱</string>
    <string name="email_hint">输入您的邮箱</string>
    <string name="bind_account">绑定收款账户</string>
    <string name="bank_name">开户银行</string>
    <string name="bank_number">收款账号</string>
    <string name="confrom_info_tips">上传银行卡和营业执照</string>
    <string name="discount_tips">注：门店的消费折扣</string>
    <string name="tips_one">为了门店销量/口碑，建议不高于行业基准折扣</string>
    <string name="tips_two">折扣越低，店铺排列越前，店铺展位越好</string>
    <string name="tips_three">折扣越低，进店率越高，门店客流倍增</string>
    <string name="tips_four">正常折扣&lt;=基准折扣，才可参与平台额外惠专场</string>
    <string name="submit_and_check">提交审核</string>
    <string name="upload_idcard_photo">上传身份证照片</string>
    <string name="upload_license">上传营业执照</string>
    <string name="upload_store_pics">上传店铺照片（2张）</string>
    <string name="title_activity_license">入驻协议</string>
    <string name="logining">正在登录...</string>
    <string name="loading">加载中...</string>
    <string name="modify_successful">修改成功</string>
    <string name="error_discount_format">特惠比例需设置在0-10之间</string>
    <string name="loan_tips">感谢您的支持，我们的客户经理会在一天内联系您，请留意来电。</string>
    <string name="recent_threeMonths_come_in">近三个月收入</string>
    <string name="bank_contact_name">收款户名</string>
    <string name="contact_name">收款人姓名</string>
    <string name="loading_new_version_info">检查新版本</string>
    <string name="find_new_version">发现新版本</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <string name="down_state">正在下载：%s</string>
    <string name="id_card_image">身份证图片</string>
    <string name="merchant_license">营业执照图片</string>
    <string name="title_activity_merchant_order_list">订单列表</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="check_register">入驻审核</string>
    <string name="gallery_select">选择图片</string>
    <string name="format_selected_button">（%d/5）确定</string>
    <string name="edit_store">店铺编辑</string>
    <string name="preview_store">店铺预览</string>
    <string name="red_packets_bill">零钱账单</string>

</resources>