<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.zj.mpocket.activity.CodeCheckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/normal_rate"
            android:textColor="@color/main_black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etDiscount"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="0"
            android:inputType="numberDecimal"
            android:padding="7dp"
            android:textColorHint="@color/text_light"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/rate"
            android:textColor="@color/main_black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/discount_rate_tips"
        android:textColor="@color/login_normal"
        android:textSize="13sp" />


    <TextView
        android:id="@+id/tvModifyRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_selector_login"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/modify_rate"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>
