<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zj.wheelview.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_screen" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:id="@+id/llButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/bg_selector_login"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_selector_login"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvProtorol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/protrol"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp" />

    </RelativeLayout>

</FrameLayout>

