<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    tools:context="com.zj.wheelview.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical">


        <EditText
            android:id="@+id/etLoginAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_account"
            android:drawablePadding="15dp"
            android:hint="@string/hint_login_account"
            android:paddingLeft="20dp"
            android:textColorHint="@color/text_light"
            android:textSize="16sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#CDCDCD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center_vertical">


        <EditText
            android:id="@+id/etLoginPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:drawableLeft="@drawable/icon_pwd"
            android:drawablePadding="15dp"
            android:hint="@string/hint_login_pwd"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="@color/text_light"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_selector_login"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_activity_login"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>
